@@ -15,7 +15,7 @@ SET(CMAKE_LIBRARY_PATH "/home/david/projects/luxcorerender/LinuxCompile/target-6
 SET(Blosc_USE_STATIC_LIBS   "ON")
 
 # Note: CUDA requires to have enabled OpenCL support too
-SET(LUXRAYS_ENABLE_CUDA TRUE)
+#SET(LUXRAYS_ENABLE_CUDA TRUE)
 #SET(LUXRAYS_DISABLE_OPENCL TRUE)
 #SET(BUILD_LUXCORE_DLL TRUE)
 
