@@ -24,6 +24,7 @@
 * Fixed a rendering difference when using/not using geometry negative scale transformations (issue #309)
 * Fixed an out of bound access in BAKECPU
 * Fixed a problem when using path.forceblackbackground.enable and env. lights
+* Fixed a problem with scenes with very hard light paths and Metropolis sampler (issue #312)
 
 Check https://wiki.luxcorerender.org/LuxCoreRender_Release_Notes for the full list
 of release notes.
